# syslandscape

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/web/: AboutHandler.cpp  AboutHandler.h  CMakeLists.txt  HandlerFactory.cpp  HandlerFactory.h  HomeHandler.cpp  HomeHandler.h  client.cpp  server.cpp  server1.cpp  server2.cpp
examples/web/ssl/: certreq.csr  dh512.pem  server.crt  server.csr  server.key  server.key.orig  server.pem
examples/web/www/: about.html  index.html
examples/web/www/webapp2/: head.html  menu.html
src/syslandscape/: CMakeLists.txt  Environment.cpp  Environment.h  Exception.cpp  Exception.h
src/syslandscape/tmpl/: CMakeLists.txt  Data.cpp  Data.h  DataType.h  DirectoryStorage.cpp  DirectoryStorage.h  Engine.cpp  Engine.h  Storage.cpp  Storage.h  StringStorage.cpp  StringStorage.h  Template.cpp  Template.h  TemplateException.cpp  TemplateException.h  Token.cpp  Token.h  TokenEnd.cpp  TokenEnd.h  TokenFor.cpp  TokenFor.h  TokenIf.cpp  TokenIf.h  TokenInclude.cpp  TokenInclude.h  TokenText.cpp  TokenText.h  TokenType.h  TokenVariable.cpp  TokenVariable.h
src/syslandscape/util/: Base64.cpp  Base64.h  CMakeLists.txt  StringUtil.cpp  StringUtil.h
src/syslandscape/web/: CMakeLists.txt  Client.cpp  Client.h  Connection.cpp  Connection.h  Connector.cpp  Connector.h  Cookie.cpp  Cookie.h  Cookies.cpp  Cookies.h  HTTPConnection.cpp  HTTPConnection.h  HTTPConnectionManager.cpp  HTTPConnectionManager.h  HTTPCookie.cpp  HTTPCookie.h  HTTPHandler.cpp  HTTPHandler.h  HTTPMethod.cpp  HTTPMethod.h  HTTPRequest.cpp  HTTPRequest.h  HTTPRequestParser.cpp  HTTPRequestParser.h  HTTPResponse.cpp  HTTPResponse.h  HTTPServer.cpp  HTTPServer.h  HTTPStatus.cpp  HTTPStatus.h  HTTPTokens.cpp  HTTPTokens.h  Handler.cpp  Handler.h  Headers.cpp  Headers.h  Request.cpp  Request.h  Response.cpp  (+21 more)
src/syslandscape/web/internal/: .#SSLAcceptor.h  Acceptor.cpp  Acceptor.h  ClientRequestUtil.cpp  ClientRequestUtil.h  ClientResponseUtil.cpp  ClientResponseUtil.h  ConnectionManager.cpp  ConnectionManager.h  HttpRequestUtil.cpp  HttpRequestUtil.h  HttpResponseUtil.cpp  HttpResponseUtil.h  IOServicePool.cpp  IOServicePool.h  SSLAcceptor.cpp  SSLAcceptor.h  SSLConnector.cpp  SSLConnector.h  SSLSocket.cpp  SSLSocket.h  Socket.cpp  Socket.h  TCPAcceptor.cpp  TCPAcceptor.h  TCPConnector.cpp  TCPConnector.h  TCPSocket.cpp  TCPSocket.h
test/: CMakeLists.txt
test/tmpl/: CMakeLists.txt  data.cpp  directorystorage.cpp  template.cpp  token.cpp
test/tmpl/template/document/: document-1.html
test/util/: CMakeLists.txt  base64.cpp
test/web/: CMakeLists.txt  cookie.cpp  httptokens.cpp  parser.cpp  web.cpp  webcontext.cpp  webpathsegment.cpp
