cmake_minimum_required(VERSION 3.0.0)
project(syslandscape)

option(test "Build all tests." ON)
option(examples "Build all examples." ON)

set(CMAKE_BUILD_TYPE DEBUG)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_COLOR_MAKEFILE   ON)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_definitions(-g -Wall -Wextra)

find_package(PkgConfig)
find_package(Threads REQUIRED)
find_package(OpenSSL REQUIRED)
set(Boost_USE_MULTITHREADED ON)
find_package(Boost 1.58.0 COMPONENTS system filesystem REQUIRED)

include_directories(${OPENSSL_INCLUDE_DIR})
include_directories(${Boost_INCLUDE_DIR})

set(SYSLANDSCAPE syslandscape)
set(SYSLANDSCAPE_UTIL syslandscape-util)
set(SYSLANDSCAPE_TMPL syslandscape-tmpl)
set(SYSLANDSCAPE_WEB syslandscape-web)

include_directories(src)
add_subdirectory(src/syslandscape)
add_subdirectory(src/syslandscape/util)
add_subdirectory(src/syslandscape/tmpl)
add_subdirectory(src/syslandscape/web)

if (test)
  enable_testing()
  add_subdirectory(external/gtest)
  include_directories(external/gtest/googletest/include)
  add_subdirectory(test)
endif()
if (examples)
  add_subdirectory(examples)
endif()

message(STATUS "CMake ${CMAKE_VERSION} successfully configured ${PROJECT_NAME} using ${CMAKE_GENERATOR} generator")
message(STATUS "Installation target path: ${CMAKE_INSTALL_PREFIX}")

message(STATUS "")
message(STATUS "Generated with config types: ${CMAKE_CONFIGURATION_TYPES}")
message(STATUS "Setting Poco build type - ${CMAKE_BUILD_TYPE}")
message(STATUS "")

message(STATUS "C_FLAGS:  =${CMAKE_C_FLAGS}")
message(STATUS "CMAKE_C_FLAGS_DEBUG:=${CMAKE_C_FLAGS_DEBUG}")
message(STATUS "CMAKE_C_FLAGS_RELEASE:=${CMAKE_C_FLAGS_RELEASE}")
message(STATUS "CMAKE_C_FLAGS_MINSIZEREL:=${CMAKE_C_FLAGS_MINSIZEREL}")
message(STATUS "CMAKE_C_FLAGS_RELWITHDEBINFO:=${CMAKE_C_FLAGS_RELWITHDEBINFO}")
message(STATUS "")
message(STATUS "")
message(STATUS "CXX_FLAGS:=${CMAKE_CXX_FLAGS}")
message(STATUS "CMAKE_CXX_FLAGS_DEBUG:=${CMAKE_CXX_FLAGS_DEBUG}")
message(STATUS "CMAKE_CXX_FLAGS_RELEASE:=${CMAKE_CXX_FLAGS_RELEASE}")
message(STATUS "CMAKE_CXX_FLAGS_MINSIZEREL:=${CMAKE_CXX_FLAGS_MINSIZEREL}")
message(STATUS "CMAKE_CXX_FLAGS_RELWITHDEBINFO:=${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
