SET(TEST_NAME test-web-cookie)
add_executable(${TEST_NAME} cookie.cpp)
target_link_libraries(${TEST_NAME} -lasan -lubsan)
target_link_libraries(${TEST_NAME} ${SYSLANDSCAPE_TMPL})
target_link_libraries(${TEST_NAME} ${SYSLANDSCAPE_UTIL})
target_link_libraries(${TEST_NAME} ${SYSLANDSCAPE_WEB})
target_link_libraries(${TEST_NAME} ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(${TEST_NAME} gtest gtest_main)
add_test(${TEST_NAME} ${TEST_NAME})

SET(TEST_NAME test-web-context)
add_executable(${TEST_NAME} webcontext.cpp)
target_link_libraries(${TEST_NAME} -lasan -lubsan)
target_link_libraries(${TEST_NAME} ${SYSLANDSCAPE_TMPL})
target_link_libraries(${TEST_NAME} ${SYSLANDSCAPE_UTIL})
target_link_libraries(${TEST_NAME} ${SYSLANDSCAPE_WEB})
target_link_libraries(${TEST_NAME} ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(${TEST_NAME} gtest gtest_main)
add_test(${TEST_NAME} ${TEST_NAME})

SET(TEST_NAME parser)
add_executable(${TEST_NAME} parser.cpp)
target_link_libraries(${TEST_NAME} -lasan -lubsan)
target_link_libraries(${TEST_NAME} ${SYSLANDSCAPE_TMPL})
target_link_libraries(${TEST_NAME} ${SYSLANDSCAPE_UTIL})
target_link_libraries(${TEST_NAME} ${SYSLANDSCAPE_WEB})
target_link_libraries(${TEST_NAME} ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(${TEST_NAME} gtest gtest_main)
add_test(${TEST_NAME} ${TEST_NAME})
